Update Show function in Script.js

--- a/index.html
+++ b/index.html
@@ -393,18 +393,18 @@
         <form action="">
 
             <div class="inputBox">
-                <input type="text" placeholder="name">
-                <input type="email" placeholder="email">
+                <input type="text" id="name" placeholder="name">
+                <input type="email" id="email" placeholder="email">
             </div>
 
             <div class="inputBox">
-                <input type="number" placeholder="number">
-                <input type="text" placeholder="food name">
+                <input type="number" id="number" placeholder="number">
+                <input type="text" id="foodname" placeholder="food name">
             </div>
 
             <textarea placeholder="address" name="" id="" cols="30" rows="10"></textarea>
 
-            <input type="submit" value="order now" class="btn">
+            <input type="submit" value="order now" class="btn" onclick="show()">
 
         </form>
 
@@ -435,25 +435,6 @@
 <div class="loader-container">
     <img src="images/loader.gif" alt="">
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- custom js file link  -->
 <script src="script.js"></script>
